--- a/index.html
+++ b/index.html
@@ -9,7 +9,7 @@
   <meta charset="utf-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
 
-  <link rel="import" href="elements/chat-app.html">
+  <link rel="import" href="elements/chat-view.html">
 
   <style>
     body, chat-app {
