--- a/elements/chat-thread-list.html
+++ b/elements/chat-thread-list.html
@@ -1,5 +1,5 @@
 <!--
-Copyright (c) 2015 The Polymer Project Authors. All rights reserved.
+Copyright (c) 2015-16 The Polymer Project Authors. All rights reserved.
 This code may only be used under the BSD style license found at http://polymer.github.io/LICENSE.txt
 The complete set of authors may be found at http://polymer.github.io/AUTHORS.txt
 The complete set of contributors may be found at http://polymer.github.io/CONTRIBUTORS.txt
@@ -9,44 +9,41 @@ subject to an additional IP rights grant found at http://polymer.github.io/PATEN
 
 <link rel="import" href="../components/polymer/polymer.html">
 <link rel="import" href="../components/paper-toolbar/paper-toolbar.html">
+<link rel="import" href="../components/paper-icon-button/paper-icon-button.html">
 <link rel="import" href="../components/paper-item/paper-item.html">
 <link rel="import" href="../components/paper-item/paper-item-body.html">
-<link rel="import" href="../components/paper-menu/paper-menu.html">
 <link rel="import" href="../components/iron-icons/communication-icons.html">
 <link rel="import" href="../components/paper-badge/paper-badge.html">
 
 <dom-module id="chat-thread-list">
 
+  <style>
+  </style>
+
   <template>
 
     <style>
       paper-menu { padding: 0; }
+      paper-item[selected] { font-weight: bold; }
     </style>
 
     <paper-toolbar>
       <paper-icon-button icon="inbox" id="inbox"></paper-icon-button>
       <div class="title">Threads</div>
-      <paper-badge for="inbox" label="[[_unread]]" hidden$="[[!_unread]]">
-      </paper-badge>
+      <paper-badge for="inbox" label="[[unread]]" hidden="[[!unread]]"></paper-badge>
     </paper-toolbar>
 
-    <paper-menu selected="{{_selectedIndex}}">
-      <template is="dom-repeat" items="[[threads]]">
-        <paper-item>
-          <paper-item-body two-line>
-            <div>
-              <iron-icon icon="communication:textsms"
-                hidden$="[[_computeThreadRead(item.messages.length, item.id, user.lastReadMessage.*)]]">
-              </iron-icon>
-              <span>[[item.title]]</span>
-            </div>
-            <div secondary>[[_extractLastMessage(item, item.messages.length)]]</div>
-          </paper-item-body>
-        </paper-item>
-      </template>
-    </paper-menu>
-
-    <array-selector id="selector" items="{{threads}}" selected-item="{{selectedThread}}"></array-selector>
+    <template is="dom-repeat" items="[[threads]]">
+      <paper-item id="[[item.id]]" selected$="[[_isSelected(item)]]" on-tap="_selectThread">
+        <paper-item-body two-line>
+          <div>
+            <iron-icon icon="communication:textsms" hidden=[[!item.unread]]></iron-icon>
+            <span>[[item.title]]</span>
+          </div>
+          <div secondary>[[item.lastMessage]]</div>
+        </paper-item-body>
+      </paper-item>
+    </template>
 
   </template>
 
@@ -57,47 +54,20 @@ subject to an additional IP rights grant found at http://polymer.github.io/PATEN
 
       properties: {
 
-        user: Object,
+        unread: Number,
 
-        threads: {
-          type: Array,
-          observer: '_threadsChanged'
-        },
+        threads: Array,
 
-        selectedThread: {
-          notify: true
-        },
-
-        _selectedIndex: {
-          observer: '_selectedIndexChanged'
-        },
-
-        _unread: {
-          computed: '_computeUnreadCount(user.lastReadMessage.*, threads.*)'
-        }
+        selectedThread: Object
 
       },
 
-      _threadsChanged: function() {
-        this._selectedIndex = 0;
+      _selectThread: function (evt) {
+        this.fire('select-thread', { id: evt.model.item.id });
       },
 
-      _selectedIndexChanged: function(idx) {
-        this.$.selector.select(this.threads[idx]);
-      },
-
-      _computeUnreadCount: function(lastReadMessageInfo, threadsInfo) {
-        return threadsInfo.base.reduce(function(prev, thread) {
-          return prev + (lastReadMessageInfo.base[thread.id] == thread.messages.length ? 0 : 1);
-        }, 0);
-      },
-
-      _computeThreadRead: function(length, id, lastReadMessageInfo) {
-        return length == lastReadMessageInfo.base[id];
-      },
-
-      _extractLastMessage: function(thread, length) {
-        return thread.messages[thread.messages.length - 1].text;
+      _isSelected: function (thread) {
+        return thread === this.selectedThread;
       }
 
     });
