--- a/elements/chat-view.html
+++ b/elements/chat-view.html
@@ -1,5 +1,5 @@
 <!--
-Copyright (c) 2015 The Polymer Project Authors. All rights reserved.
+Copyright (c) 2015-16 The Polymer Project Authors. All rights reserved.
 This code may only be used under the BSD style license found at http://polymer.github.io/LICENSE.txt
 The complete set of authors may be found at http://polymer.github.io/AUTHORS.txt
 The complete set of contributors may be found at http://polymer.github.io/CONTRIBUTORS.txt
@@ -10,36 +10,119 @@ subject to an additional IP rights grant found at http://polymer.github.io/PATEN
 <link rel="import" href="../components/polymer/polymer.html">
 <link rel="import" href="../components/paper-drawer-panel/paper-drawer-panel.html">
 <link rel="import" href="../components/iron-ajax/iron-ajax.html">
-<link rel="import" href="chat-thread-list.html">
-<link rel="import" href="chat-thread-view.html">
+<link rel="import" href="./chat-thread-list.html">
+<link rel="import" href="./chat-thread-view.html">
 
 <dom-module id="chat-view">
 
-  <style>
-    :host {
-      font-family: 'Muli', 'Helvetica Neue', helvetica, arial;
-      display: block;
-    }
-  </style>
-
   <template>
 
-    <iron-ajax url="data.json" last-response="{{data}}" auto></iron-ajax>
+    <style>
+      :host {
+        font-family: 'Muli', 'Helvetica Neue', helvetica, arial;
+        display: block;
+      }
+    </style>
+
+    <iron-ajax url="./data.json" last-response="{{data}}" auto></iron-ajax>
 
     <paper-drawer-panel>
 
-      <chat-thread-list drawer user="[[data.user]]" threads="[[data.threads]]" selected-thread="{{selectedThread}}"></chat-thread-list>
+      <chat-thread-list drawer unread="[[unread]]" threads="[[threads]]"
+        selected-thread="[[selectedThread]]" on-select-thread="_onSelectThread"></chat-thread-list>
 
-      <chat-thread-view main user="{{data.user}}" thread="{{selectedThread}}"></chat-thread-view>
+      <chat-thread-view main user="[[user]]" thread="[[selectedThread]]" on-post="_onPost" on-set-thread-title="_onSetThreadTitle"></chat-thread-view>
 
     </paper-drawer-panel>
+
   </template>
 
   <script>
     Polymer({
 
-      is: 'chat-view'
+      is: 'chat-view',
 
+      properties: {
+
+        user: Object,
+
+        threads: Array,
+
+        selectedThread: Object,
+
+        unread: Number
+
+      },
+
+      observers: [
+        '_init(data)'
+      ],
+
+      _onSelectThread: function (evt) {
+          const id = evt.detail.id;
+          const thread = this.data.threads[id];
+          if (thread) {
+              this.data.selectedThreadId = evt.detail.id;
+              this._markThreadRead(id, thread);
+          }
+          this._update(this.data);
+      },
+
+      _onSetThreadTitle: function (evt) {
+          const d = evt.detail;
+          const id = d.threadId;
+          const thread = this.data.threads[id];
+          if (thread) {
+              this.data.threads[id].title = d.title;
+          }
+          this._update(this.data);
+      },
+
+      _onPost: function (evt) {
+          const d = evt.detail;
+          const id = d.threadId;
+          const thread = this.data.threads[id];
+          if (thread) {
+              thread.messages.push({
+                  user: d.user,
+                  text: d.text
+              });
+              if (id === this.data.selectedThreadId) {
+                this._markThreadRead(id, thread);
+              }
+          }
+          this._update(this.data);
+      },
+
+      _markThreadRead: function (id, thread) {
+          this.data.user.lastReadMessage[id] = thread.messages.length - 1;
+      },
+
+      _init: function (data) {
+          this._onSelectThread({detail: {id: 0}});
+      },
+
+      _update: function (data) {
+          const threads = data.threads;
+          const user = data.user;
+          let unread = 0;
+          this.threads = threads.map(function (thread) {
+            const messages = thread.messages.slice();
+            const last = messages.length - 1;
+            let lastRead = user.lastReadMessage[thread.id];
+            if (lastRead === undefined) lastRead = -1;
+            const unreadMsgs = last - lastRead;
+            unread += Boolean(unreadMsgs);
+            return Object.assign({}, thread, {
+                messages: messages,
+                lastMessage: messages[last].text,
+                unread: unreadMsgs
+            });
+          });
+          this.selectedThread = this.threads[this.data.selectedThreadId];
+          this.unread = unread;
+          this.user = user;
+      }
     });
   </script>
 
