--- a/elements/input-header.html
+++ b/elements/input-header.html
@@ -8,10 +8,16 @@ subject to an additional IP rights grant found at http://polymer.github.io/PATEN
 -->
 
 <link rel="import" href="../components/polymer/polymer.html">
+<link rel="import" href="../components/paper-toolbar/paper-toolbar.html">
+<link rel="import" href="../components/paper-icon-button/paper-icon-button.html">
+<link rel="import" href="../components/paper-menu-button/paper-menu-button.html">
+<link rel="import" href="../components/iron-icons/iron-icons.html">
+<link rel="import" href="../components/paper-input/paper-input.html">
 
 <dom-module id="input-header">
 
   <template>
+
     <style>
       .dropdown-content {
         padding: 10px;
@@ -20,38 +26,32 @@ subject to an additional IP rights grant found at http://polymer.github.io/PATEN
 
     <paper-toolbar>
 
-      <paper-icon-button icon="[[icon]]" hidden$="[[!icon]]"></paper-icon-button>
-      <div class="title">[[title]]</div>
+      <paper-icon-button icon="mail"></paper-icon-button>
+
+      <div class="title">{{label}}</div>
 
       <paper-menu-button horizontal-align="right" vertical-align="top">
         <paper-icon-button icon="more-vert" class="dropdown-trigger"></paper-icon-button>
         <div class="dropdown-content">
-          <paper-input label="[[label]]" value="{{title}}"></paper-input>
+          <paper-input label="Thread name:" value="{{label}}"></paper-input>
         </div>
       </paper-menu-button>
-
     </paper-toolbar>
+
   </template>
 
   <script>
     Polymer({
+
       is: 'input-header',
 
       properties: {
-        title: {
-          type: String,
-          notify: true
-        },
-
-        icon: {
-          type: String,
-          value: ''
-        },
 
         label: {
           type: String,
-          value: 'Title:'
+          notify: true
         }
+
       }
 
     });
